# docriver

./: auth-readme.txt  env.sh  readme-auth.txt  readme-development.txt  readme-example-app.txt  readme-flickr.txt  readme-nginx.txt  readme-observer.txt  readme-processing.txt  readme.md  readme.txt  todo.txt
auth/: pyproject.toml
client/: pyproject.toml
doc/: docriver-gateway.drawio  solution.dot
docker/: requirements.txt
server/: document_ingest.py  exceptions.py  flickr_mine.py  gateway.py  main.py  metrics_util.py  pyproject.toml  pytest.ini  reference_token_server.py  token_decode.py  token_issue.py  token_validate.py  trace_util.py
server/auth/: keystore.py  token.py
server/controller/: html_utils.py  http.py
server/dao/: document.py  tx.py
server/model/: authorizer.py  common.py  document_service.py  file_validator.py  submit_service.py  tx_delete_service.py  tx_get_service.py  tx_submit_service.py
server/src/docriver_server/: exceptions.py  gateway.py  reference_token_server.py
server/src/docriver_server/actuator/: health.py
server/src/docriver_server/controller/resources/js/: viewer.js
server/src/docriver_server/dao/: document.py  tx.py
server/src/docriver_server/model/: authorizer.py  s3_url.py
server/test/functional/: __init__.py  fixture.py  test_authorizations.py  test_multipart_form_transactions.py  test_rest_doc_submissions.py  test_rest_doc_transactions.py  test_rest_transactions.py  util.py
server/test/resources/auth/: docriver-imposter.p12  docriver.key  docriver.p12  p123456.p12  test123456.p12  truststore.p12
(+110 files in other folders)
